--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 >
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>Serverless Web App</groupId>
-  <artifactId>Serverless Web App</artifactId>
+  <groupId>Java Web App</groupId>
+  <artifactId>Java Web App</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
@@ -18,8 +18,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -45,11 +45,6 @@
       <version>1.2.5</version>
     </dependency>
     <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.0</version>
-    </dependency>
-    <dependency>
       <groupId>javax.json</groupId>
       <artifactId>javax.json-api</artifactId>
       <version>1.1</version>
@@ -59,10 +54,14 @@
       <artifactId>javax.json</artifactId>
       <version>1.1</version>
     </dependency>
+    <dependency>
+      <groupId>commons-dbcp</groupId>
+      <artifactId>commons-dbcp</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
-    <finalName>Serverless Web App</finalName>
+    <finalName>Java Web App</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
